日付が回る...

--- a/views/index.erb
+++ b/views/index.erb
@@ -5,6 +5,6 @@
 	<title>タイトル</title>
 </head>
 <body>
-
+<a href="https://access.line.me/oauth2/v2.1/authorize?response_type=code&client_id=1567041353&redirect_uri=https://trunk-hackers-a4geru.c9users.io/user&state=12345abcde&scope=openid%20profile&nonce=09876xyz"><img src="/btn_login_base.png"></a>
 </body>
 </html>
