--- a/views/user.erb
+++ b/views/user.erb
@@ -16,7 +16,7 @@
 		<th>end_time</th>
 		<th>image_url</th>
 	</tr>
-	<% @participants.each do |event| %>
+	<% @events.each do |event| %>
 		<tr>
 			<td><%= event.event_name %></td>
 			<td><%= event.detail %></td>
