もうすぐ3時❤️

--- a/views/event_edit.erb
+++ b/views/event_edit.erb
@@ -5,7 +5,7 @@
 	<title>タイトル</title>
 </head>
 <body>
-<form method="post" action="/event/edit" enctype='multipart/form-data'>
+<form method="post" action="/event/<%= @event.id %>/edit" enctype='multipart/form-data'>
     <table>
     	<tr>
     		<th>name</th>
