--- a/views/index.erb
+++ b/views/index.erb
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
-    <link href="https://fonts.googleapis.com/earlyaccess/kokoro.css" rel="stylesheet" />
+    <!--<link href="https://fonts.googleapis.com/earlyaccess/kokoro.css" rel="stylesheet" />-->
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <script type="text/javascript" src="//webfont.fontplus.jp/accessor/script/fontplus.js?a5JzW-hQzyA%3D&aa=1&ab=1&ab=1" charset="utf-8"></script>
 </head>
 <body>
     <header>
@@ -13,7 +14,7 @@
           <div class="logo">ロゴ
               <img src="" alt="">
           </div>
-          <div class="login"><a href="/"></a></div>
+          <div><a href="https://access.line.me/oauth2/v2.1/authorize?response_type=code&client_id=1567041353&redirect_uri=https://trunk-hackers-a4geru.c9users.io/user&state=12345abcde&scope=openid%20profile&nonce=09876xyz"><p class="login"></p></a></div>
         </div>
           <h1>コンセプトがーーーーー<br>あーーーるーーー</h1>
           <div class="btn">ハッカソンを開催する</div>
@@ -21,8 +22,8 @@
     <div class="container">
         <section class="main">
             <div class="search">
-            <h2>ハッカソンをさがす</h2>
-            <form action="/" method="get" class="form">
+            <h2>ハッカソンを探す</h2>
+            <form action="/search" method="post" class="form">
               <input type="text" name="keyword" value="" placeholder="キーワード">
               <button type="submit" class="submit">
             </form>
