--- a/public/mypage.css
+++ b/public/mypage.css
@@ -1,26 +1,19 @@
 body{
     /*font-family: "Kokoro";*/
     font-family: "TsukuARdGothicStd-B";
-    margin: 0;
-    text-decoration: none;
     webkit-text-size-adjust: 100%;
+    margin: 0;
 }
 
-a {
-text-decoration: none;
-}
-
-/* header */
-header{
-    height: 220px;
+/* header index */
+.header-index{
     width: 100%;
-    background-image: url(wysiwyg_71e591219408a729b2e0.jpg);
-    background-size:100%;
-    border-bottom: 4px solid #000;
+    margin-bottom: 25px;
 }
 
 .before_login {
-    padding: 10px;
+  padding: 10px;
+  padding-bottom: 10px;
   display: flex;
   justify-content: space-between;
 }
@@ -31,11 +24,12 @@ header{
     background: #fff;
 }
 
-.login {
-  height: 33px;
-  width: 115px;
-  margin-right:  -1.5px;
-  background-image: url(./btn_login_base.png);
+.login{
+  height: 35px;
+  width: 35px;
+  border-radius: 50px;
+  margin-right: 11.5px;
+  background-color: #fff;
   background-size: contain;
   background-repeat: no-repeat;
 }
@@ -54,28 +48,35 @@ h1{
     border-radius: 10px;
     text-align: center;
     margin: 0 auto;
-    padding-top: 15px;
+    padding-top: 10px;
     color: #fff;
+}
+
+/* header other */
+.title{
+    width: 100%;
+    height: 45px;
+    padding-top: 10px;
+    color: #fff;
+    background-color: #e72d2f;
+    margin-bottom: 20px;
 }
 
 /* main */
 .container{
     width: 100%;
-    margin-top: 25px;
+    margin-top: -85px;
     text-align: center;
 }
 
 .main{
     width: 100%;
-}
-
-.form {
-  padding-top: 2px;
+    z-index: 1;
 }
 
 .search{
     width: 100%;
-    border-bottom: 4px solid #e9eaea;
+    border-bottom: 3px solid #e9eaea;
     padding-bottom: 18px;
 }
 
@@ -90,20 +91,32 @@ h1{
   background-repeat: no-repeat;
 }
 
+.search.mypage{
+    width: 100%;
+    border-bottom: 3px solid #e9eaea;
+    margin-top: 40px;
+    padding-bottom: 18px;
+}
+
+.plan{
+    width: 100%;
+    border-bottom: 3px solid #e9eaea;
+}
+
 h2{
     font-size: 18px;
 }
 
 input{
-    width: 220px;
-    height: 45px;
+    width: 250px;
+    height: 40px;
     border-radius: 10px;
     margin: 0 auto;
     background-color: #f1f1f1;
     border: none;
     padding-left: 20px;
-    font-size: 15px;
-    font-family: "TsukuARdGothicStd-B";
+    font-size: 14px;
+    font-family: "Kokoro";
 }
 
 /* contents */
@@ -111,16 +124,14 @@ input{
     display: flex;
     align-items: flex-start;
     padding-top: 15px;
-    width: 87%;
+    width: 95%;
     height: 100px;
     margin: 0 auto;
-    color:#000;
     border-bottom: 1px solid #474342;
 }
 
-article img {
-    width: 90px;
-    height: 90px;
+.contents:last-child{
+    border: none;
 }
 
 .date{
@@ -184,4 +195,16 @@ h3{
     font-size: 8px;
     line-height: 0em;
     word-wrap: break-word;
+}
+
+/* detail */
+.details-thumbnail{
+    height: 250px;
+}
+
+.detail-main{
+    background-color: #ccc;
+    width: 100%;
+    height: 500px;
+    z-index: 100;
 }
