--- a/public/search.css
+++ b/public/search.css
@@ -1,5 +1,5 @@
 body{
-    font-family: "TsukuARdGothicStd-B";
+    font-family: "TsukuARdGothicStd-D";
     webkit-text-size-adjust: 100%;
     margin: 0;
 }
