--- a/views/mypage.erb
+++ b/views/mypage.erb
@@ -29,7 +29,7 @@
                     <div class="border"></div>
                     <p class="day">２４</p>
                 </div>
-                <img class="contents-thumbnail" src="img.png" alt="" width="90px">
+                <img class="contents-thumbnail" src="../img.png" alt="" width="90px">
                 <div class="contents-headline">
                 <h3>なんとかかんとかハッカソン</h3>
                 <p class="contents-text">ああああああああああああああああああ</p>
@@ -41,7 +41,7 @@
                     <div class="border"></div>
                     <p class="day">２４</p>
                 </div>
-                <img class="contents-thumbnail" src="img.png" alt="" width="90px">
+                <img class="contents-thumbnail" src="../img.png" alt="" width="90px">
                 <div class="contents-headline">
                 <h3>なんとかかんとかハッカソン</h3>
                 <p class="contents-text">ああああああああああああああああああ</p>
@@ -60,7 +60,7 @@
                     <div class="border"></div>
                     <p class="day">２４</p>
                 </div>
-                <img class="contents-thumbnail" src="img.png" alt="" width="90px">
+                <img class="contents-thumbnail" src="../img.png" alt="" width="90px">
                 <div class="contents-headline">
                 <h3>なんとかかんとかハッカソン</h3>
                 <p class="contents-text">ああああああああああああああああああ</p>
@@ -72,7 +72,7 @@
                     <div class="border"></div>
                     <p class="day">２４</p>
                 </div>
-                <img class="contents-thumbnail" src="img.png" alt="" width="90px">
+                <img class="contents-thumbnail" src="../img.png" alt="" width="90px">
                 <div class="contents-headline">
                 <h3>なんとかかんとかハッカソン</h3>
                 <p class="contents-text">ああああああああああああああああああ</p>
@@ -84,7 +84,7 @@
                     <div class="border"></div>
                     <p class="day">２４</p>
                 </div>
-                <img class="contents-thumbnail" src="img.png" alt="" width="90px">
+                <img class="contents-thumbnail" src="../img.png" alt="" width="90px">
                 <div class="contents-headline">
                 <h3>なんとかかんとかハッカソン</h3>
                 <p class="contents-text">ああああああああああああああああああ</p>
