--- a/public/index.css
+++ b/public/index.css
@@ -1,6 +1,6 @@
 body{
     /*font-family: "Kokoro";*/
-    font-family: "TsukuARdGothicStd-B";
+    font-family: "TsukuARdGothicStd-D";
     margin: 0;
     text-decoration: none;
     webkit-text-size-adjust: 100%;
@@ -12,7 +12,7 @@ text-decoration: none;
 
 /* header */
 header{
-    height: 220px;
+    height: 230px;
     width: 100%;
     background-image: url(wysiwyg_71e591219408a729b2e0.jpg);
     background-size:100%;
