--- a/public/mypage.css
+++ b/public/mypage.css
@@ -1,6 +1,6 @@
 body{
     /*font-family: "Kokoro";*/
-    font-family: "TsukuARdGothicStd-B";
+    font-family: "TsukuARdGothicStd-D";
     webkit-text-size-adjust: 100%;
     margin: 0;
 }
