--- a/views/index.erb
+++ b/views/index.erb
@@ -11,13 +11,13 @@
 <body>
     <header>
         <div class="before_login">
-          <div class="logo">ロゴ
-              <img src="" alt="">
+          <div class="logo">
+              <img src="../oideya_logo.png" alt=""  height="35">
           </div>
           <div><a href="https://access.line.me/oauth2/v2.1/authorize?response_type=code&client_id=1567041353&redirect_uri=https://trunk-hackers-a4geru.c9users.io/user&state=12345abcde&scope=openid%20profile&nonce=09876xyz"><p class="login"></p></a></div>
         </div>
           <h1>コンセプトがーーーーー<br>あーーーるーーー</h1>
-          <div class="btn">ハッカソンを開催する</div>
+          <div ><a href="/event/new"><p class="btn">ハッカソンを開催する</p></a></div>
     </header>
     <div class="container">
         <section class="main">
