--- a/views/search.erb
+++ b/views/search.erb
@@ -14,7 +14,9 @@
       <div class="logo">ロゴ
           <img src="" alt="">
       </div>
-      <a href="" class="login"><img src="" alt=""></a>
+      <% if @user.image_url %>
+        <a href="" class="login"><img src="<%= @user.image_url %>" alt=""></a>
+      <% end %>
       </div>
   </header>
     <div class="container">
