--- a/views/index.erb
+++ b/views/index.erb
@@ -9,15 +9,14 @@
     <script type="text/javascript" src="//webfont.fontplus.jp/accessor/script/fontplus.js?a5JzW-hQzyA%3D&aa=1&ab=1&ab=1" charset="utf-8"></script>
 </head>
 <body>
-    <header>
+    <header id="top">
         <div class="before_login">
           <div class="logo">
               <img src="../oideya_logo.png" alt=""  height="35">
           </div>
           <div><a href="https://access.line.me/oauth2/v2.1/authorize?response_type=code&client_id=1567041353&redirect_uri=https://trunk-hackers-a4geru.c9users.io/user&state=12345abcde&scope=openid%20profile&nonce=09876xyz"><p class="login"></p></a></div>
         </div>
-          <h1>コンセプトがーーーーー<br>あーーーるーーー</h1>
-          <div ><a href="/event/new"><p class="btn">ハッカソンを開催する</p></a></div>
+          <h1>おこしやすううう<br>じゃすちんの林</h1>
     </header>
     <div class="container">
         <section class="main">
@@ -47,5 +46,9 @@
             <% end %>
         </section>
     </div>
+    <footer>
+        <a href="#top"><img src="../Top.png" alt=""></a>
+        <p></p>
+    </footer>
 </body>
 </html>
