--- a/views/mypage.erb
+++ b/views/mypage.erb
@@ -7,18 +7,16 @@
     <!--<link href="https://fonts.googleapis.com/earlyaccess/kokoro.css" rel="stylesheet" />-->
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <script type="text/javascript" src="//webfont.fontplus.jp/accessor/script/fontplus.js?a5JzW-hQzyA%3D&aa=1&ab=1&ab=1" charset="utf-8"></script>
-    <% if @user.image_url %>
-    <style> .login { background-image(<%= @user.image_url %>)} </style>
-    <% end %>
+    
 </head>
 <body>
-    <header class="header-index">
+    <header class="header-index" id="top">
         <div class="before_login">
-        <div class="logo">ロゴ
-            <img src="" alt="">
+        <div class="logo">
+            <img src="../oideya_logo.png" alt="" height="31">
         </div>
         <% if @user.image_url %>
-        <a href=""><p class="login"></p></a>
+          <div class="login"></div>
         <% end %>
         </div>
     </header>
@@ -30,6 +28,37 @@
             </div>
             <% if @join_events != [] %>
                 <% @join_events.each do |event| %>
+                    <a href="/event/<%= event.id %>">
+                        <article class="contents">
+                            <div class="date">
+                                <p class="month"><%= event.start_time.to_s.slice(5,2).to_i %>月</p>
+                                <div class="border"></div>
+                                <p class="day"><%= event.start_time.to_s.slice(8,2).to_i %></p>
+                            </div>
+                            <img class="contents-thumbnail" src="<%= event.image_url %>" alt="" width="90px">
+                            <div class="contents-headline">
+                            <h3><%= event.event_name %></h3>
+                            <p class="contents-text"><%= event.detail %></p>
+                            </div>
+                        </article>
+                    </a>
+                <% end %>
+            <% else %>
+                <article class="contents">
+                    <h3>現在参加予定のイベントはありません</h3>
+                </article>
+            <% end %>
+            <div ><a href="/event/new"><p class="btn">ハッカソンを開催する</p></a></div>
+
+            <div class="search mypage">
+            <h2>ハッカソンをさがす</h2>
+            <form action="/search" method="get" class="form">
+              <input type="text" name="keyword" value="" placeholder="キーワード">
+              <button type="submit" class="submit">
+            </form>
+            </div>
+            <% @events.each do |event| %>
+                <a href="/event/<%= event.id %>">
                     <article class="contents">
                         <div class="date">
                             <p class="month"><%= event.start_time.to_s.slice(5,2).to_i %>月</p>
@@ -42,34 +71,26 @@
                         <p class="contents-text"><%= event.detail %></p>
                         </div>
                     </article>
-                <% end %>
-            <% else %>
-                <article class="contents">
-                    <h3>現在参加予定のイベントはありません</h3>
-                </article>
-            <% end %>
-            <div class="search mypage">
-            <h2>ハッカソンをさがす</h2>
-            <form action="/search" method="post" class="form">
-              <input type="text" name="keyword" value="" placeholder="キーワード">
-              <button type="submit" class="submit">
-            </form>
-            </div>
-            <% @events.each do |event| %>
-                <article class="contents">
-                    <div class="date">
-                        <p class="month"><%= event.start_time.to_s.slice(5,2).to_i %>月</p>
-                        <div class="border"></div>
-                        <p class="day"><%= event.start_time.to_s.slice(8,2).to_i %></p>
-                    </div>
-                    <img class="contents-thumbnail" src="<%= event.image_url %>" alt="" width="90px">
-                    <div class="contents-headline">
-                    <h3><%= event.event_name %></h3>
-                    <p class="contents-text"><%= event.detail %></p>
-                    </div>
-                </article>
+                </a>
             <% end %>
         </section>
     </div>
+    <footer>
+        <a href="#top"><img src="../Top.png" alt=""></a>
+        <p></p>
+    </footer>
 </body>
+<% if @user %>
+    <style> 
+    .login {
+        height: 35px;
+        width: 35px;
+        border-radius: 50px;
+        margin-right: 11.5px;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-image: url("<%= @user.image_url %>");
+     }
+    </style>
+    <% end %>
 </html>
