--- a/public/event_create.css
+++ b/public/event_create.css
@@ -35,20 +35,21 @@ h1{
 
 .btn{
     width: 250px;
-    height: 35px;
+    height: 40px;
     background-color: #e72d2f;
     border-radius: 10px;
     text-align: center;
     margin: 0 auto;
     padding-top: 2px;
     color: #fff;
+    font-size:12px;
 }
 
 /* header other */
 .title{
     width: 100%;
-    height: 35px;
-    padding-top: 10px;
+    height: 37px;
+    padding-top: 15px;
     color: #fff;
     background-color: #e72d2f;
     margin-bottom: 20px;
