--- a/public/search.css
+++ b/public/search.css
@@ -24,7 +24,6 @@ a {
 .logo{
     height: 40px;
     width: 100px;
-    background: #fff;
 }
 
 .login{
@@ -59,7 +58,7 @@ h1{
 .title{
     width: 100%;
     height: 45px;
-    padding-top: 10px;
+    padding-top: 20px;
     color: #fff;
     background-color: #e72d2f;
     margin-bottom: 20px;
@@ -215,4 +214,17 @@ h3{
     width: 100%;
     height: 500px;
     z-index: 100;
+}
+
+footer{
+    height: 50px;
+    width: 100%;
+    background-size:100%;
+    border-bottom: 4px solid #000;
+    text-align: center;
+    padding-top: 10px;
+}
+
+footer img{
+    width: 30%;
 }
