--- a/views/details.erb
+++ b/views/details.erb
@@ -4,25 +4,33 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="../details.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <script type="text/javascript" src="//webfont.fontplus.jp/accessor/script/fontplus.js?a5JzW-hQzyA%3D&aa=1&ab=1&ab=1" charset="utf-8"></script>
     <!--<link href="https://fonts.googleapis.com/earlyaccess/kokoro.css" rel="stylesheet" />-->
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <script type="text/javascript" src="//webfont.fontplus.jp/accessor/script/fontplus.js?a5JzW-hQzyA%3D&aa=1&ab=1&ab=1" charset="utf-8"></script>
+    <style>
+        .header-index  { 
+            background-image: url(<%= @event.image_url %>);
+            background-size: cover;
+        }
+    </style>
 </head>
 <body>
-    <header class="header-index">
+    <header class="header-index" id="top">
         <div class="before_login">
-        <div class="logo">ロゴ
-            <img src="" alt="">
+        <div class="logo">
+            <a href="<%= session[:user] ? "/user/#{session[:user]}" : "/" %>">
+                <img src="../oideya_logo.png" height="35">
+            </a>
         </div>
-        <% if @user.image_url %>
-        <a href="" class="login"><img src="<%= @user.image_url %>" alt=""></a>
+        <% if @user %>
+          <div class="login"></div>
         <% end %>
         </div>
     </header>
     <div class="container">
         <section class="main details">
-            <div class="details-thumbnail">
-            </div>
             <div class="details-main-headline">
                 <%= @event.event_name %>
             </div>
@@ -40,7 +48,6 @@
                 <h2 class="detail-text"><%= @event.detail %></h2>
                 </div>
             </div>
-            <%= session[:user] %>
             <% if session[:user] %>
                 <% if @event.join(session[:user]) %>
                 <form method="post" action="/event/<%= @event.id %>/cancel">
@@ -51,16 +58,36 @@
     				<input class="btn details" type="submit" value='参加する'>
     			</form>
                 <% end %>
+            <% else %>
+            <div class="center">
+                <a href="https://access.line.me/oauth2/v2.1/authorize?response_type=code&client_id=1567041353&redirect_uri=https://trunk-hackers-a4geru.c9users.io/user&state=12345abcde&scope=openid%20profile&nonce=09876xyz"><p class="line"></p></a>
+            </div>
             <% end %>
         </section>
     </div>
+    <footer>
+        <a href="#top"><img src="../Top.png" alt=""></a>
+        <p></p>
+    </footer>
     <style>
-        .details-thumbnail{
-            background-image: url(<%= @event.image_url %>);
-            background-size:contain;
-            background-repeat:no-repeat;
-            background-position:center;
-        }
+    <% if @user %>
+    .login {
+        height: 35px;
+        width: 35px;
+        border-radius: 50px;
+        margin-right: 37.5px;
+        margin-top: 10px;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-image: url("<%= @user.image_url %>");
+    }
+    <% end %>
+    
+    .center{
+        text-align:center;
+        margin: auto;
+        margin-top: 20px;
+    }
     </style>
 </body>
 </html>
