--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
-    <!--<link href="https://fonts.googleapis.com/earlyaccess/kokoro.css" rel="stylesheet" />-->
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <script type="text/javascript" src="//webfont.fontplus.jp/accessor/script/fontplus.js?a5JzW-hQzyA%3D&aa=1&ab=1&ab=1" charset="utf-8"></script>
 </head>
@@ -16,7 +15,7 @@
           </div>
           <div><a href="https://access.line.me/oauth2/v2.1/authorize?response_type=code&client_id=1567041353&redirect_uri=https://trunk-hackers-a4geru.c9users.io/user&state=12345abcde&scope=openid%20profile&nonce=09876xyz"><p class="login"></p></a></div>
         </div>
-          <h1>おこしやすううう<br>じゃすちんの林</h1>
+          <h1>関西を世界一<br>ギークな街にする</h1>
     </header>
     <div class="container">
         <section class="main">
