もうすぐ長い夏休みが終わる🐞

--- a/views/index.erb
+++ b/views/index.erb
@@ -13,7 +13,7 @@
           <div class="logo">
               <img src="../oideya_logo.png" alt=""  height="35">
           </div>
-          <div><a href="https://access.line.me/oauth2/v2.1/authorize?response_type=code&client_id=1567041353&redirect_uri=https://trunk-hackers-a4geru.c9users.io/user&state=12345abcde&scope=openid%20profile&nonce=09876xyz"><p class="login"></p></a></div>
+          <div><a href="https://access.line.me/oauth2/v2.1/authorize?response_type=code&client_id=1567041353&redirect_uri=#{ENV["BASE_URL"]}/user&state=12345abcde&scope=openid%20profile&nonce=09876xyz"><p class="login"></p></a></div>
         </div>
           <h1>関西を世界一<br>ギークな街にする</h1>
     </header>
